--- a/my-ux-portfolio/package.json
+++ b/my-ux-portfolio/package.json
@@ -3,10 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "bootstrap": "^5.1.3",
     "cra-template": "1.2.0",
+    "framer-motion": "^12.4.2",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
-    "react-scripts": "^5.0.1"
+    "react-hook-form": "^7.54.2",
+    "react-scripts": "^5.0.1",
+    "react-scroll": "^1.9.2",
+    "react-toastify": "^11.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
