--- a/my-ux-portfolio/package.json
+++ b/my-ux-portfolio/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-ux-portfolio",
   "version": "0.1.0",
+  "homepage": "https://yungseepferd.github.io/portfolio",
   "private": true,
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
@@ -18,6 +19,8 @@
     "react-toastify": "^11.0.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -43,6 +46,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.2",
     "tailwindcss": "^4.0.6"
   }
