--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Build directories
+# Ignore dependencies and build artifacts
+node_modules/
+.cache/
 dist/
 build/
-
-# Cache directories
-.cache/
