--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "homepage": "https://yungseepferd.github.io/portfolio",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@material/web": "^2.2.0",
+    "@mui/icons-material": "^6.4.7",
+    "@mui/material": "^6.4.7",
     "@react-three/drei": "^9.121.5",
-    "@react-three/fiber": "^8.17.14",
+    "@react-three/fiber": "^8.18.0",
+    "@types/three": "^0.174.0",
     "bootstrap": "^5.1.3",
     "cra-template": "1.2.0",
     "framer-motion": "^12.4.2",
