--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.1.3",
     "cra-template": "1.2.0",
     "framer-motion": "^12.4.2",
+    "gsap": "^3.12.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.2.0",
