--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "autoprefixer": "^10.4.20",
     "gh-pages": "^6.3.0",
     "postcss": "^8.5.2",
-    "tailwindcss": "^4.0.6"
+    "tailwindcss": "^4.0.6",
+    "webpack-bundle-analyzer": "^4.10.2"
   }
 }
