--- a/package.json
+++ b/package.json
@@ -1,35 +1,23 @@
 {
-  "name": "my-ux-portfolio",
+  "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://yungseepferd.github.io/portfolio",
+  "homepage": "https://yungseepferd.github.io/Portfolio/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@fortawesome/free-brands-svg-icons": "^6.7.2",
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@material/web": "^2.2.0",
-    "@mui/icons-material": "^6.4.7",
-    "@mui/material": "^6.4.7",
-    "@react-three/drei": "^9.121.5",
-    "@react-three/fiber": "^8.18.0",
-    "@types/three": "^0.174.0",
-    "bootstrap": "^5.1.3",
-    "cra-template": "1.2.0",
-    "framer-motion": "^12.4.2",
-    "gsap": "^3.12.7",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.10.9",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.54.2",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
+    "@react-three/drei": "^10.0.6",
+    "@react-three/fiber": "^9.1.2",
+    "framer-motion": "^12.6.5",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-intersection-observer": "^9.16.0",
-    "react-lazy-load-image-component": "^1.6.3",
     "react-scripts": "^5.0.1",
-    "react-scroll": "^1.9.2",
-    "react-toastify": "^11.0.3",
-    "styled-components": "^6.1.16",
-    "three": "^0.173.0"
+    "react-scroll": "^1.9.3",
+    "styled-components": "^6.1.17",
+    "three": "^0.175.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -58,10 +46,18 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "autoprefixer": "^10.4.21",
     "gh-pages": "^6.3.0",
-    "postcss": "^8.5.2",
-    "tailwindcss": "^4.0.6",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.3",
     "webpack-bundle-analyzer": "^4.10.2"
+  },
+  "peerDependencies": {
+    "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0"
   }
 }
