--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
     "@material/web": "^2.2.0",
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
-    "@react-three/drei": "^9.121.5",
-    "@react-three/fiber": "^8.18.0",
-    "@types/three": "^0.174.0",
     "bootstrap": "^5.1.3",
     "cra-template": "1.2.0",
     "framer-motion": "^12.4.2",
@@ -25,11 +22,12 @@
     "react-hook-form": "^7.54.2",
     "react-intersection-observer": "^9.16.0",
     "react-lazy-load-image-component": "^1.6.3",
+    "react-router-dom": "^6.30.0",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.2",
     "react-toastify": "^11.0.3",
     "styled-components": "^6.1.16",
-    "three": "^0.173.0"
+    "three": "^0.154.0"
   },
   "scripts": {
     "start": "react-scripts start",
