--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@mui/system": "^7.0.2",
+    "@react-spring/three": "^9.7.5",
+    "@react-three/drei": "^10.0.6",
+    "@react-three/fiber": "^9.1.2",
     "framer-motion": "^12.6.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
