--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^5.15.10",
-    "@mui/material": "^5.15.10",
+    "@mui/material": "^5.17.1",
+    "@react-spring/three": "^9.7.1",
+    "@react-three/drei": "^9.48.4",
+    "@react-three/fiber": "^8.9.1",
+    "@react-three/postprocessing": "^2.19.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,8 +18,10 @@
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scroll": "^1.9.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
+    "three": "^0.175.0",
+    "three-stdlib": "^2.35.15",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
