--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
     "three": "^0.175.0",
     "three-stdlib": "^2.35.15",
