--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -46,6 +48,8 @@
   "devDependencies": {
     "@emotion/is-prop-valid": "^1.3.1",
     "eslint-config-react-app": "^7.0.1",
+    "gh-pages": "^6.3.0",
     "web-vitals": "^4.2.4"
-  }
+  },
+  "homepage": "https://YungSeepferd.github.io/Portfolio"
 }
