--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-pdf": "^9.2.1",
     "react-router-dom": "^6.30.0",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
+    "react-swipeable": "^7.0.2",
     "styled-components": "^6.1.17",
     "three": "^0.175.0"
   },
