--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^5.15.10",
+    "@mui/lab": "^5.0.0-alpha.162",
     "@mui/material": "^5.17.1",
     "@react-three/drei": "^9.48.4",
     "@react-three/fiber": "^8.9.1",
