--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "@emotion/is-prop-valid": "^1.3.1",
     "eslint-config-react-app": "^7.0.1",
     "gh-pages": "^6.3.0",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/jest-dom": "^6.0.0"
   },
   "homepage": "https://YungSeepferd.github.io/Portfolio"
 }
