--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "@react-three/drei": "^9.48.4",
     "@react-three/fiber": "^8.9.1",
     "framer-motion": "^10.16.5",
+    "pdfjs-dist": "^2.16.105",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-pdf": "^9.2.1",
+    "react-pdf": "^5.7.2",
     "react-router-dom": "^6.30.0",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
@@ -23,10 +24,10 @@
     "three": "^0.175.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "craco start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "build": "react-scripts build",
+    "build": "craco build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -49,12 +50,14 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^7.1.0",
     "@emotion/is-prop-valid": "^1.3.1",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.0.0",
     "eslint-config-react-app": "^7.0.1",
     "gh-pages": "^6.3.0",
     "web-vitals": "^4.2.4",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/jest-dom": "^6.0.0"
+    "worker-loader": "^3.0.8"
   },
   "homepage": "https://YungSeepferd.github.io/Portfolio"
 }
