--- a/package.json
+++ b/package.json
@@ -3,25 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^5.15.10",
-    "@mui/lab": "^5.0.0-alpha.162",
-    "@mui/material": "^5.17.1",
-    "@react-three/drei": "^9.48.4",
-    "@react-three/fiber": "^8.9.1",
-    "framer-motion": "^10.16.5",
-    "pdfjs-dist": "^2.16.105",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.12",
+    "@mui/lab": "^5.0.0-alpha.165",
+    "@mui/material": "^5.15.12",
+    "@react-three/drei": "^9.99.5",
+    "@react-three/fiber": "^8.15.16",
+    "framer-motion": "^11.0.8",
+    "pdfjs-dist": "^4.0.379",
     "prop-types": "^15.8.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-pdf": "^5.7.2",
-    "react-router-dom": "^6.30.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-pdf": "^7.7.1",
+    "react-router-dom": "^6.22.2",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
-    "react-swipeable": "^7.0.2",
-    "styled-components": "^6.1.17",
-    "three": "^0.175.0"
+    "react-swipeable": "^7.0.1",
+    "styled-components": "^6.1.8",
+    "three": "^0.162.0",
+    "@emailjs/browser": "^4.3.1"
   },
   "scripts": {
     "start": "craco start",
