--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://YungSeepferd.github.io/Portfolio",
   "dependencies": {
+    "@emailjs/browser": "^4.3.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.12",
@@ -22,7 +24,7 @@
     "react-swipeable": "^7.0.1",
     "styled-components": "^6.1.8",
     "three": "^0.162.0",
-    "@emailjs/browser": "^4.3.1"
+    "tone": "^15.1.22"
   },
   "scripts": {
     "start": "craco start",
@@ -59,6 +61,5 @@
     "gh-pages": "^6.3.0",
     "web-vitals": "^4.2.4",
     "worker-loader": "^3.0.8"
-  },
-  "homepage": "https://YungSeepferd.github.io/Portfolio"
+  }
 }
