--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,34 @@
-# Ignore node_modules
-node_modules/
+# dependencies
+/node_modules
 
-# Logs
+# testing
+/coverage
+
+# production
+/build
+/dist
+/.cache
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Ignore dependencies and build artifacts
-node_modules/
-.cache/
-dist/
-build/node_modules/
-.cache/
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
