--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "react-dom": "^18.2.0",
     "react-pdf": "^7.7.1",
     "react-router-dom": "^6.22.2",
-    "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
     "react-swipeable": "^7.0.1",
     "styled-components": "^6.1.8",
@@ -27,12 +26,14 @@
     "tone": "^15.1.22"
   },
   "scripts": {
-    "start": "craco start",
+    "dev": "vite",
+    "start": "vite",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "build": "craco build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "eslintConfig": {
     "extends": [
@@ -53,12 +54,16 @@
     ]
   },
   "devDependencies": {
-    "@craco/craco": "^7.1.0",
     "@emotion/is-prop-valid": "^1.3.1",
-    "@testing-library/jest-dom": "^6.0.0",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/react": "^14.3.1",
+    "@vitejs/plugin-react": "^4.7.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint-config-react-app": "^7.0.1",
     "gh-pages": "^6.3.0",
+    "jsdom": "^26.1.0",
+    "vite": "^6.3.5",
+    "vitest": "^3.2.4",
     "web-vitals": "^4.2.4",
     "worker-loader": "^3.0.8"
   }
