--- a/package.json
+++ b/package.json
@@ -57,11 +57,17 @@
     "@emotion/is-prop-valid": "^1.3.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^14.3.1",
+    "@types/node": "^24.2.0",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
+    "@typescript-eslint/eslint-plugin": "^8.39.0",
+    "@typescript-eslint/parser": "^8.39.0",
     "@vitejs/plugin-react": "^4.7.0",
     "@vitest/coverage-v8": "^3.2.4",
     "eslint-config-react-app": "^7.0.1",
     "gh-pages": "^6.3.0",
     "jsdom": "^26.1.0",
+    "typescript": "^5.9.2",
     "vite": "^6.3.5",
     "vitest": "^3.2.4",
     "web-vitals": "^4.2.4",
