--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "styled-components": "^6.1.8",
     "three": "^0.162.0",
     "tone": "^15.1.22",
+    "zod": "^4.0.15",
     "zustand": "^4.5.2"
   },
   "scripts": {
@@ -74,6 +75,7 @@
     ]
   },
   "devDependencies": {
+    "@axe-core/react": "^4.10.2",
     "@emotion/is-prop-valid": "^1.3.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^14.3.1",
@@ -94,6 +96,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "gh-pages": "^6.3.0",
     "husky": "^9.1.7",
+    "jest-axe": "^10.0.0",
     "jsdom": "^26.1.0",
     "lint-staged": "^15.5.2",
     "prettier": "^3.6.2",
