--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@react-three/drei": "^9.99.5",
     "@react-three/fiber": "^8.15.16",
     "framer-motion": "^11.0.8",
+    "pdfjs-dist": "^4.4.168",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-  "react-pdf": "^7.7.1",
-  "pdfjs-dist": "^4.4.168",
+    "react-pdf": "^7.7.1",
     "react-router-dom": "^6.22.2",
     "react-scroll": "^1.9.0",
     "react-swipeable": "^7.0.1",
@@ -43,8 +43,14 @@
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
-  "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --report-unused-disable-directives",
-  "lint:fix": "eslint . --fix",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:visual": "playwright test e2e/visual.spec.ts --update-snapshots",
+    "test:visual:verify": "playwright test e2e/visual.spec.ts",
+    "test:perf": "vitest --config vitest.perf.config.ts",
+    "test:mutation": "stryker run",
+    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --report-unused-disable-directives",
+    "lint:fix": "eslint . --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
     "type-check": "tsc --noEmit",
@@ -80,8 +86,12 @@
     ]
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.10.2",
     "@axe-core/react": "^4.10.2",
     "@emotion/is-prop-valid": "^1.3.1",
+    "@playwright/test": "^1.54.2",
+    "@stryker-mutator/core": "^9.0.1",
+    "@stryker-mutator/vitest-runner": "^9.0.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^14.3.1",
     "@testing-library/user-event": "^14.4.3",
@@ -105,8 +115,10 @@
     "jsdom": "^26.1.0",
     "lint-staged": "^15.5.2",
     "prettier": "^3.6.2",
+    "sharp": "^0.34.3",
     "typescript": "^5.9.2",
     "vite": "^6.3.5",
+    "vite-plugin-image-optimizer": "^2.0.2",
     "vitest": "^3.2.4"
   }
 }
