--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,49 @@
-# Ignore node_modules
+# Dependencies
 node_modules/
+/.pnp
+.pnp.js
+
+# Testing
+/coverage
+
+# Production and build artifacts
+/build/
+/dist/
+.cache/
+
+# Environment variables
+.env
+.env.local
+.env.development
+.env.development.local
+.env.test.local
+.env.production
+.env.production.local
 
 # Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+logs/
+*.log
 
-# Ignore dependencies and build artifacts
-node_modules/
-.cache/
-dist/
-build/node_modules/
-.cache/
+# Editor directories and files
+.vscode/
+.idea/
+*.sublime-*
+*.swp
+*.swo
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Optional npm/yarn files
+# Uncomment if you want to ignore these
+# package-lock.json
+# yarn.lock
