--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "three": "^0.175.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "REACT_APP_BASE_URL=/ react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
@@ -51,5 +51,5 @@
     "gh-pages": "^6.3.0",
     "web-vitals": "^4.2.4"
   },
-  "homepage": "https://YungSeepferd.github.io/Portfolio"
+  "homepage": "https://goekevincent.me"
 }
