--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://goekevincent.me",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -22,7 +23,7 @@
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build -r https://github.com/YungSeepferd/Portfolio.git",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -50,6 +51,5 @@
     "eslint-config-react-app": "^7.0.1",
     "gh-pages": "^6.3.0",
     "web-vitals": "^4.2.4"
-  },
-  "homepage": "https://YungSeepferd.github.io/Portfolio"
+  }
 }
