--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,8 +30,11 @@ jobs:
       - name: Install dependencies
         run: |
           npm ci
-          npm audit
         
+      - name: Audit dependencies
+        run: |
+          npm audit
+
       - name: Build
         run: |
           npm run build
