--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "deploy": "gh-pages -d build -r https://github.com/YungSeepferd/Portfolio.git",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:e2e": "node tests/e2e/smoke.test.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -48,8 +49,10 @@
   },
   "devDependencies": {
     "@emotion/is-prop-valid": "^1.3.1",
+    "chromedriver": "^140.0.4",
     "eslint-config-react-app": "^7.0.1",
     "gh-pages": "^6.3.0",
+    "selenium-webdriver": "^4.35.0",
     "web-vitals": "^4.2.4"
   }
 }
