--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^10.16.5",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
+    "react-bits": "^1.0.5",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.30.0",
     "react-scripts": "^5.0.1",
