--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-three/drei": "^9.48.4",
     "@react-three/fiber": "^8.9.1",
     "framer-motion": "^10.16.5",
+    "gsap": "^3.13.0",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-bits": "^1.0.5",
