--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "test:e2e": "node tests/e2e/smoke.test.js",
+    "test:pw": "playwright test",
+    "test:pw:ui": "playwright test --ui",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -53,6 +55,8 @@
   },
   "devDependencies": {
     "@emotion/is-prop-valid": "^1.3.1",
+    "@playwright/test": "^1.55.1",
+    "axe-playwright": "^2.2.2",
     "chromedriver": "^140.0.4",
     "eslint-config-react-app": "^7.0.1",
     "gh-pages": "^6.3.0",
